@@ -21,6 +21,7 @@ The following bugs are resolved with this release:
   [28896] strncmp-avx2-rtm and wcsncmp-avx2-rtm fallback on non-rtm
     variants when avoiding overflow
   [28953] nss: Protect against errno changes in function lookup
+  [29062] elf: Fix memory leak in _dl_find_object_update
 
 
 Version 2.35
